# MultiLiveQueue

./: .gitignore  README.md  SUMMARY.md  bot.py  docker-compose.yml  entrypoint.sh  exemple.env  index.md  pyproject.toml  start-here.md  utils.py
.github/workflows/: auto_deploy.yml
data/: ranks.json
data/matches/: 06d135a7-494b-4685-9004-c98f5a6eb8c7.json  11a5bbab-f18d-4402-8b47-e135c9c02c97.json
data/players/: Azukine#6257.json  HakuDZ#4168.json  Holapapalouis#6220.json  PCS_Psycoquaxe#3138.json  PL_-_Aikawa_Towa#5031.json  Zakichan#7478.json  username#discriminator.json
match/: MatchCommands.py  MatchController.py  match-commands.md  points-calculation.md
matchmaking/: QueueCommands.py  QueueController.py  Queues.py  casual.md  commands.py  queue-commands.md
matchmaking/rank-queue/: README.md  captain-queue.md  random-queue.md
mock-data/matches/: uuid.json
mock-data/players/: player.json
queue/: queue-commands.md
ranking/: RankingCommands.py  RankingController.py  commands.py  leaderboard.md  rank-commands.md  ranking-points.md
user/: UserCommands.py  UserController.py  steps-before-queuing.md  user-commands.md
